# FSIV

./: FUNCIONES_PRACTICAS.txt  README.md
PRACTICA0/: esqueleto.cc  show_img.cc  show_video.cc
PRACTICA1/: realzar_primer_plano.cpp
PRACTICA1/EJERCICIO1/: common_code.cpp  realzar_primer_plano.cpp
PRACTICA1/EJERCICIO2/: cbg_process.cpp  common_code.cpp
PRACTICA2/color_balance/: color_balance.cpp.txt  common_code.cpp.txt  common_code.hpp.txt
PRACTICA2/img_equalization/: common_code.cpp.txt  common_code.hpp.txt  img_equalization.cpp.txt
PRACTICA3/sharpening/: LEEME.txt  common_code.cpp  sharpen.cpp
PRACTICA3/usm_enhance/: LEEME.txt  common_code.cpp.txt  common_code.hpp.txt  usm_enhance.cpp.txt
Practicas/Practica0/: CHANGELOG.TXT  CMakeLists.txt  comp_stats.cc  esqueleto.cc
Practicas/aug_real/: README.md
Practicas/bcksegm/: README.md  vsegbase.cpp
Practicas/calibrate/: README.md  calibrate.cpp  undistort.cpp
Practicas/cbg_process/: README.md  cbg_process.cpp
Practicas/sharpen/: README.md  (+1 more)
cbg_process/: LEEME.txt  README.md  common_code.cpp
color_balance/: common_code.cpp
funcionesPracticas/: CMakeLists.txt  funciones.cc  funciones.hpp  main.cc
img_equalization/: CMakeCache.txt  Makefile  cmake_install.cmake  common_code.cpp  img_equalization  img_equalization.cbp  test_common_code
realzar_primer_plano/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  realzar_primer_plano  realzar_primer_plano.cbp  test_common_code
sharpening/: LEEME.txt  common_code.cpp  sharpen.cpp
usm_enhance/: LEEME.txt  common_code.cpp  usm_enhance.cpp
(+63 files in other folders)
